Change style of note blocks

--- a/命令行输出替换/0. 样例教程.md
+++ b/命令行输出替换/0. 样例教程.md
@@ -12,8 +12,10 @@
 
 你可以使用`--debug`选项来在每一行输出前加上标记。~~这个标记会包含输出为stdout或stderr的信息（通过`o`和`e`表达）。~~
 
-注意：`--showchars`和任何debug选项必须放在`clang test.c`的前面，否则要执行的命令将会被认为`clang test.c --showchars`。
+> [!NOTE]
+>  `--showchars`和任何debug选项必须放在`clang test.c`的前面，否则要执行的命令将会被认为`clang test.c --showchars`。
 
+> [!TIP]
 > 如需了解更多信息，请阅读[使用clitheme-exec](2.%20使用clitheme-exec.md)文档。
 
 ```plaintext
@@ -136,8 +138,10 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 {/substrules_section}
 ```
 
+> [!TIP]
 > 如需了解更多语法定义和功能（多行匹配/替换内容、命令限制规则等），请阅读[编写定义文件](1.%20编写定义文件.md)文档。
 
+> [!TIP]
 > 如需了解字符替换、行边界、和替换规则选项等功能，请阅读[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)文档。
 
 ## 3. 使用定义文件
