--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -78,6 +78,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     - 如需引用ANSI Escape字符（`{{ESC}}`），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substesc`选项，并在内容中使用`{{ESC}}`
     - 如需引用其他字符（如`\x08`、`\x07`等），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substchar`选项，并在内容中使用如`{{[x08]}}`、`{{[x07]}}`等表达式
 
+> [!TIP]
 > 更多选项和功能（如行边界、内容变量、仅匹配前台进程输出）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
 
 - 主题定义文件中的匹配规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
@@ -117,7 +118,8 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 在替换内容基本相同的情况下，你可以为一个规则定义同时指定多个匹配表达式。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[subst_string]`或`[subst_regex]`语句。
 
-**注意：** 不能同时指定`[subst_string]`或`[subst_regex]`语句（两者不能在同一个规则定义中混用）
+> [!NOTE]
+>  不能同时指定`[subst_string]`或`[subst_regex]`语句（两者不能在同一个规则定义中混用）
 
 ```plaintext
 {substrules_section}
@@ -182,7 +184,8 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 - 你也可以使用`[filter_cmds_regex]`或`<filter_cmd_regex>`通过正则表达式匹配命令。检查时会尝试匹配命令的开头（会在表达式前加上`^`符号）。
 - 使用`<unset_filter_cmd>`来取消设定限制。设定后，之后定义的匹配规则不会拥有命令限制。
 
-**注意：** 如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
+> [!NOTE]
+>  如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
 
 ### 命令匹配机制
 
