--- a/命令行输出替换/2. 使用clitheme-exec.md
+++ b/命令行输出替换/2. 使用clitheme-exec.md
@@ -14,7 +14,7 @@ $ python3 -m clitheme.exec
 <...>
 ```
 
-注意：如需在代码仓库文件夹中调用`clitheme-exec`，请调用仓库中的模块文件：
+如需在代码仓库文件夹中调用`clitheme-exec`，请调用仓库中的模块文件：
 
 ```plaintext
 # 在仓库根目录中执行：
