--- a/应用程序和字符串定义API/编写主题定义文件/基本用法.md
+++ b/应用程序和字符串定义API/编写主题定义文件/基本用法.md
@@ -39,6 +39,7 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 {/entries_section}
 ```
 
+> [!TIP]
 > 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../../附录：主题定义文件通用语法/可以设定的选项.md)
 
 ### 使用`<in_domainapp>`和`<in_subsection>`
@@ -51,7 +52,8 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 
 你可以使用`<unset_domainapp>`和`<unset_subsection>`以取消定义这些信息。
 
-**注意：** 使用`<in_domainapp>`和`<unset_domainapp>`时会同时取消定义之前设定的`<in_subsection>`信息。
+> [!NOTE]
+>  使用`<in_domainapp>`和`<unset_domainapp>`时会同时取消定义之前设定的`<in_subsection>`信息。
 
 ```plaintext
 {entries_section}
