--- a/自定义manpage文档/2. 使用clitheme-man.md
+++ b/自定义manpage文档/2. 使用clitheme-man.md
@@ -9,7 +9,7 @@ $ clitheme-man
 What manual page do you want?
 ```
 
-注意：如需在代码仓库文件夹中调用`clitheme-man`，请调用仓库中的模块文件：
+如需在代码仓库文件夹中调用`clitheme-man`，请调用仓库中的模块文件：
 
 ```plaintext
 # 在仓库根目录中执行：
