--- a/附录：主题定义文件通用语法/内容变量.md
+++ b/附录：主题定义文件通用语法/内容变量.md
@@ -51,9 +51,11 @@ setvar[place2]: version
 
 这意味着内容变量可以在任何**不是语法词语**的地方使用。
 
-**注意：** 变量名称中不能包含任何空格，否则将不会被处理。比如：`{{var }}`和`{{this and}}`将不会被处理
+> [!NOTE]
+>  变量名称中不能包含任何空格，否则将不会被处理。比如：`{{var }}`和`{{this and}}`将不会被处理
 
-**注意：** 如果变量内容中带有`{{ESC}}`字样，且`substesc`选项是设定的，变量内容中的`{{ESC}}`在定义时不会被处理；只会在相应地方和定义使用中才会被处理。
+> [!NOTE]
+>  如果变量内容中带有`{{ESC}}`字样，且`substesc`选项是设定的，变量内容中的`{{ESC}}`在定义时不会被处理；只会在相应地方和定义使用中才会被处理。
 
 如需禁用变量替换，请取消设定`substvar`选项（使用`set_options nosubstvar`）。更多信息请见[可以设定的选项](./可以设定的选项.md)。
 
