--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -90,6 +90,7 @@
 [/subst_regex]
 ```
 
+> [!TIP]
 > 你可以使用`(enable_subst)`语句一键启用以上所有的内容替换选项，并可以使用`(disable_subst)`语句一键禁用。
 > ```plaintext
 > # 相当于`set_options substvar substesc substchar linebounds`
