--- a/附录：主题定义文件通用语法/文件格式和语法.md
+++ b/附录：主题定义文件通用语法/文件格式和语法.md
@@ -25,7 +25,8 @@
 # 更多像这样的定义
 ```
 
-**注意：** 文档中的文件语法示例会包含缩进。这只是为了提升定义的可读性而已；你不需要像这样子包含缩进。但是，为了可读性建议拥有包含缩进的好习惯。
+> [!NOTE]
+>  文档中的文件语法示例会包含缩进。这只是为了提升定义的可读性而已；你不需要像这样子包含缩进。但是，为了可读性建议拥有包含缩进的好习惯。
 
 ## 注释
 
@@ -35,7 +36,8 @@
 # this is a comment
 ```
 
-**注意：** 注释只能在新的一行上定义。请不要在行的末尾定义注释。
+> [!NOTE]
+>  注释只能在新的一行上定义。请不要在行的末尾定义注释。
 
 ```plaintext
 # 错误用法：
@@ -50,8 +52,10 @@
 !require_version 2.0
 ```
 
-**注意：** 该定义必须添加在除注释以外的任何内容之前
+> [!NOTE]
+>  该定义必须添加在除注释以外的任何内容之前
 
 你可以在`!require_version`中指定`2.0`及以上的版本，并且可以指定如`a.b`格式的发行版次。你还可以指定带有`-betaN`后缀的beta版本。完整支持的版本格式为：`a.b-betaN`
 
-**注意：** 不支持带有bugfix版本信息的版本格式（比如`2.0p1`）。
+> [!NOTE]
+>  不支持带有bugfix版本信息的版本格式（比如`2.0p1`）。
