--- a/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
+++ b/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
@@ -2,7 +2,8 @@
 
 为了帮助开发者更方便的添加CLItheme的适配，本项目提供了一个frontend模块。这个模块包含了抓取当前主题中字符串的功能；只需要调用一个函数就可以了。除此之外，frontend还包括了其他的功能，比如检查当前的主题有没有适配请求的字符串。
 
-**注意：** 目前frontend模块只支持使用Python 3编写的应用程序；其他语言编写的程序需要自行访问数据结构。如需更多信息，请见[**路径名称和数据结构**](1.%20路径名称和数据结构.md)。
+> [!NOTE]
+>  目前frontend模块只支持使用Python 3编写的应用程序；其他语言编写的程序需要自行访问数据结构。如需更多信息，请见[**路径名称和数据结构**](1.%20路径名称和数据结构.md)。
 
 ## 新建`FetchDescriptor`类
 
@@ -47,7 +48,8 @@ f.disable_lang=True
 
 你也可以使用更简短的`reof`函数定义以减少代码量。
 
-**注意：** 该函数返回的字符串（除返回`fallback_string`之外）不会包含任何末尾空格。
+> [!NOTE]
+>  该函数返回的字符串（除返回`fallback_string`之外）不会包含任何末尾空格。
 
 ```py
 # [对接上方的f=FetchDescriptor(...)定义]
@@ -89,7 +91,8 @@ f.retrieve_entry_or_fallback("example-fmt-entry", "{0}: Current value is {value}
 - `set_lang`：指定默认的`lang`数值
 - `set_disablelang`：指定默认的`disable_lang`数值
 
-**请注意：** 这些全局定义只会影响之后新建的`FetchDescriptor`；更改或设定这些全局定义不会影响已经创建的`FetchDescriptor`。
+> [!NOTE]
+>  这些全局定义只会影响之后新建的`FetchDescriptor`；更改或设定这些全局定义不会影响已经创建的`FetchDescriptor`。
 
 你也可以修改以下全局变量来设定默认值。该定义会对一个模块中的**所有文件**生效，并且没有通过以上函数进行设定（或取消设定）时会被使用。
 
