--- a/附录：主题定义文件通用语法/多行文本段落.md
+++ b/附录：主题定义文件通用语法/多行文本段落.md
@@ -33,7 +33,8 @@
 
 起始空格会被减去多行文本段落内容内的共同空格大小（tab符号将会被视为8个空格）。这意味着只有行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上一定大小的空格，你可以[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`leadtabs:<n>`或`leadspaces:<n>`选项；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
 
-**注意：** 在部分列表形式的多行段落中（如`[supported_apps]`、`[filter_cmds]`等）不会保留任何空格，并且不允许指定控制缩进的选项。
+> [!NOTE]
+>  在部分列表形式的多行段落中（如`[supported_apps]`、`[filter_cmds]`等）不会保留任何空格，并且不允许指定控制缩进的选项。
 
 ### 样例
 
