Fix page link in manpage doc

--- a/自定义manpage文档/1. 编写定义文件.md
+++ b/自定义manpage文档/1. 编写定义文件.md
@@ -54,7 +54,7 @@
 ```
 
 > [!TIP]
-> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../../附录：主题定义文件通用语法/可以设定的选项.md)
+> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
 
 ### 引用文件：`<include_file>`和`[include_file]`
 
