Fix blockquote in comments description

--- a/附录：主题定义文件通用语法/文件格式和语法.md
+++ b/附录：主题定义文件通用语法/文件格式和语法.md
@@ -37,12 +37,12 @@
 ```
 
 > [!NOTE]
->  注释只能在新的一行上定义。请不要在行的末尾定义注释。
-
-```plaintext
-# 错误用法：
-{header_section} # Some comments here
-```
+> 注释只能在新的一行上定义。请不要在行的末尾定义注释。
+> 
+> ```plaintext
+> # 错误用法：
+> {header_section} # Some comments here
+> ```
 
 ## 指定最低支持的版本
 
