Add information about `default:` and `[default]` shorhands

--- a/命令行输出替换/0. 样例教程.md
+++ b/命令行输出替换/0. 样例教程.md
@@ -102,12 +102,12 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
         clang++
     [/filter_cmds]
         [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
-            # 如果你想仅在系统语言设定为中文（zh_CN）时应用这个替换规则，你可以使用"locale[zh_CN]"
-            # 使用"locale[default]:"时不会添加系统语言限制
-            locale[default]: \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+            # 如果你想仅在系统语言设定为中文（zh_CN）时应用这个替换规则，你可以使用"locale[zh_CN]:"
+            # 使用"default:"时不会添加系统语言限制
+            default: \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
         [/subst_regex]
         [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
-            locale[default]: \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
+            default: \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
         [/subst_regex]
 {/substrules_section}
 ```
@@ -130,16 +130,16 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
         # 内容中的`{{match_prefix}}`引用会被替换成对应的`match_prefix`变量的内容
         [subst_regex] {{match_prefix}}warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
-            locale[default]: \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+            default: \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
         [/subst_regex]
         [subst_regex] {{match_prefix}}error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
-            locale[default]: \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
+            default: \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
         [/subst_regex]
 {/substrules_section}
 ```
 
 > [!TIP]
-> 如需了解更多语法定义和功能（多行匹配/替换内容、命令限制规则等），请阅读[编写定义文件](1.%20编写定义文件.md)文档。
+> 如需了解更多语法定义和功能（多行匹配/替换内容、多语言支持、命令限制规则等），请阅读[编写定义文件](1.%20编写定义文件.md)文档。
 
 > [!TIP]
 > 如需了解字符替换、行边界、和替换规则选项等功能，请阅读[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)文档。
