--- a/应用程序和字符串定义API/编写主题定义文件/基本用法.md
+++ b/应用程序和字符串定义API/编写主题定义文件/基本用法.md
@@ -18,11 +18,11 @@
 
 要定义一个字符串，请使用`entry`定义，并且包括该字符串的路径名称，如`[entry] com.example example-app text-one`。如需获取路径名称，请参考相关应用程序的帮助信息或文档。
 
-CLItheme的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale[<default|语言>]: <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
+CLItheme的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale[<语言>]: <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
 
 `locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../../附录：主题定义文件通用语法/多语言支持.md)）
 
-定义字符串时建议添加`default`语言（`locale[default]: <字符串>`）。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
+定义字符串时建议添加`default`语言（也可以使用`default: <字符串>`语法）。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
 
 如果你不需要为应用程序添加多语言支持，只定义`default`语言就可以了。
 
@@ -32,7 +32,7 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 {entries_section}
     # ...
     [entry] com.example example-app text-one
-        locale[default]: Some text
+        default: Some text
         locale[en_US]: Some text
         locale[zh_CN]: 一些文本
     [/entry]
@@ -60,19 +60,19 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
     <in_domainapp> com.example example-app
         # 和 com.example example-app entry-one 相同
         [entry] entry-one
-            locale[default]: Some text
+            default: Some text
         [/entry]
 
         <in_subsection> subsection-one subsection-two
             # 和 com.example example-app subsection-one subsection-two entry-two 相同
             [entry] entry-two
-                locale[default]: Some text
+                default: Some text
             [/entry]
 
         <in_subsection> subsection-three
             # 和 com.example example-app subsection-three entry-three 相同
             [entry] entry-three
-                locale[default]: Some text
+                default: Some text
             [/entry]
     # 会同时取消定义subsection
     <unset_domainapp>
@@ -87,14 +87,14 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 {entries_section}
     [entry] entry-one
     [entry] another-entry
-        locale[default]: Some string definition content
+        default: Some string definition content
     [/entry]
     # 上方定义等于以下定义：
     [entry] entry-one
-        locale[default]: Some string definition content
+        default: Some string definition content
     [/entry]
     [entry] another-entry
-        locale[default]: Some string definition content
+        default: Some string definition content
     [/entry]
 {/entries_section}
 ```
