--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -13,21 +13,21 @@
     # substesc和endmatchhere选项会对以下所有的匹配规则生效
     (set_options) endmatchhere substesc
     [subst_string] |Some text|
-        [locale] default
+        [default]
             Some other text here
             Good stuff {{ESC}}
-        [/locale]
+        [/default]
     [/subst_string] linebounds
     [subst_string] Some other text
-        [locale] default
+        [default]
             Another good stuff
-        [/locale]
+        [/default]
     [/subst_string] noendmatchhere foregroundonly
     # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
     [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
         # 如果想对以下内容设定选项，需要使用多行文本段落
         locale[zh_CN]: (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
-        locale[default]: (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
+        default: (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
     [/subst_regex]
 {/substrules_section}
 ```
@@ -51,11 +51,11 @@
 
 ```plaintext
 [entry] entry2
-    [locale] default
+    [default]
         Text 1
         Text 2
             Text 3
-    [/locale] leadtabs:1
+    [/default] leadtabs:1
 [/entry]
 ```
 
@@ -86,7 +86,7 @@
 # 内容："Line content  "
 [subst_regex] |Line content  |
     # 内容："  Replace content|new content "
-    locale[default]: |  Replace content|new content |
+    default: |  Replace content|new content |
 [/subst_regex]
 ```
 
