--- a/附录：主题定义文件通用语法/多行文本段落.md
+++ b/附录：主题定义文件通用语法/多行文本段落.md
@@ -18,13 +18,13 @@
 如果你想在多行文本段落中输入结束语句（如`[/locale]`等），请在语句前加上`\`符号，如`\[/locale]`等。该语句必须放在一行中的最前面才会被识别并处理，否则前面的`\`符号将不会在最终内容中移除。
 
 ```plaintext
-[locale] default
+[default]
     Use 
     \[/locale]
     To end the block
     Using [/locale]
     will also work
-[/locale]
+[/default]
 ```
 
 ## 关于缩进和边缘空格的处理
@@ -40,26 +40,26 @@
 
 ```plaintext
 [entry] entry1
-    [locale] default
+    [default]
         Text 1
         Text 2
             Text 3
                 Text 4
-    [/locale]
+    [/default]
 [/entry]
 [entry] entry2
-    [locale] default
+    [default]
         Text 1
         Text 2
             Text 3
-    [/locale] leadtabs:1
+    [/default] leadtabs:1
 [/entry]
 [entry] entry3
-    [locale] default
+    [default]
 Text 1
 Text 2
 Text 3
-    [/locale]
+    [/default]
 [/entry]
 ```
 
