--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -65,12 +65,22 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ---
 
-- 在`[locale]`内容段落内输入要替换的内容；在`[locale]`语句之后定义系统语言（locale）：当前的系统语言符合时才会执行替换规则
+**多行替换：**
+
+- 在`[locale]`内容段落内输入要替换的内容，并在`[locale]`语句之后定义系统语言（locale）：当前的系统语言符合时才会执行替换规则
     - 你可以同时指定多个系统语言，如：`[locale] en_US zh_CN`
-    - 如不需要限制系统语言，请使用`default`：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义（更多信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)）
+    - 如不需要限制系统语言，请使用`default`语言：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义
+    - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
     - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md#关于缩进和边缘空格的处理)
-- 如果替换的内容只有一行，你可以使用`locale[<系统语言>]:`并且在后面加上替换的内容
-    - 你可以同时指定多个系统语言，如`locale[en_US default]:`
+- 如果不需要限制语言，你可以使用`[default]`内容段落（相当于`[locale] default`）
+
+**单行替换：**
+
+- 如果替换的内容只有一行，你可以使用`locale[<系统语言>]:`并且在后面加上替换的内容：当前的系统语言符合时才会执行替换规则
+    - 你可以同时指定多个系统语言，如`locale[en_US C]:`
+    - 如不需要限制系统语言，请使用`default`语言：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义
+    - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
+- 如果不需要限制语言，你可以使用`default:`（相当于`locale[default]:`）
 
 ---
 
@@ -94,13 +104,14 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     # substesc和endmatchhere选项会对以下所有的匹配规则生效
     (set_options) endmatchhere substesc
     [subst_string] Some text
-        [locale] default
+        [default]
             Some other text here
             Good stuff {{ESC}}
-        [/locale]
+        [/default]
     [/subst_string] subststderronly
     [subst_string] Some other text
-        [locale] default
+        # 仅在en_US系统语言下应用
+        [locale] en_US
             Another good stuff
         [/locale]
     [/subst_string] noendmatchhere subststdoutonly
@@ -109,7 +120,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         # 如果系统语言为zh_CN，会使用以下定义：
         locale[zh_CN]: (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
         # 否则，会使用以下定义：
-        locale[default]: (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
+        default: (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
     [/subst_regex]
 {/substrules_section}
 ```
@@ -125,20 +136,20 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {substrules_section}
     [subst_string] Some text 1
     [subst_string] Some another text
-        locale[default]: Some substitution text
+        default: Some substitution text
     [/subst_string]
     # 上方定义等于以下定义：
     [subst_string] Some text 1
-        locale[default]: Some substitution text
+        default: Some substitution text
     [/subst_string]
     [subst_string] Some another text
-        locale[default]: Some substitution text
+        default: Some substitution text
     [/subst_string]
 
     # 错误语法（两者不能混用）：
     # [subst_string] Some text 1
     # [subst_regex] Some regex 1
-    #     locale[default]: Some substitution text
+    #     default: Some substitution text
     # [/subst_string]
 {/substrules_section}
 ```
