--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -24,9 +24,10 @@ LC_ALL=
 
 你可以为一个字符串定义和命令行输出替换规则添加多个语言版本。CLItheme会根据系统语言或者应用程序的语言设定自动选择相应的定义。
 
-关于更多信息，请参考[**应用程序和字符串定义API/编写主题定义文件/基本用法**](../应用程序和字符串定义API/编写主题定义文件/基本用法.md)中的**使用`entry`段落**。
-
 定义时建议添加`default`语言。如果该定义不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在该定义支持当前系统语言的情况下才会被调用。
+
+> [!TIP]
+> 你可以使用`default:`来替代`locale[default]:`和`[default]`来替代`[locale] default`。
 
 在多行文本段落段落下，你可以同时定义多个语言，省去重复复制粘贴内容的过程。
 
@@ -34,11 +35,10 @@ LC_ALL=
 {entries_section}
     # ...
     [entry] com.example example-app example-entry
-        locale[default]: Your entry text here
-        locale[en_US]: Your entry text here
+        default: Your entry text here
         locale[zh_CN]: 你的定义文本
-        # 或者使用多行文本段落（可以同时定义多个语言）
-        [locale] default en_US
+        # 或者使用多行文本段落
+        [locale] en_US
             Your entry text here
         [/locale]
         [locale] zh_CN
@@ -49,10 +49,10 @@ LC_ALL=
 {substrules_section}
     # ...
     [subst_string] Some example output message
-        locale[default]: Output message! :)
+        default: Output message! :)
         locale[zh_CN]: 输出提示！o(≧v≦)o
-        # 同时定义default、C、和en_US语言
-        [locale] default C en_US
+        # 同时定义C和en_US语言
+        [locale] C en_US
             Output message! :)
         [/locale]
     [/subst_string]
