Update `endmatchhere` option description

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -106,11 +106,11 @@
 - ~~`subststdoutonly`：仅匹配standard output的输出内容~~
 - ~~`subststderronly`：仅匹配standard error的输出内容~~
 - ~~`substallstreams`：**默认设定；用于重置之前设定**；匹配所有内容~~
-- `endmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续应用其他的匹配规则
-    - **注意：** 该选项仅适用于匹配规则所在文件中的其他规则，其他文件中的规则将不受影响
-    - 使用`noendmatchhere`以取消设定
+- `endmatchhere`：如果替换规则与当前输出内容成功匹配时，不会在对应的行数上应用文件中剩余的匹配规则
+    - 使用`noendmatchhere`取消设定
+    - 对于剩余的多行替换规则，会检查其对应的行数是否涉及之前带有`endmatchhere`的替换
 - `foregroundonly`（**仅在Unix系统上有效**）：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
-    - 使用`noforegroundonly`以取消设定该选项
+    - 使用`noforegroundonly`取消设定
     - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
     - 你也可以在命令限制条件中指定该选项（如`[/filter_commands] foregroundonly`），以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
     - **注意：** 经测试，只有shell等应用程序会在执行其他命令时修改自己的前台状态；`sudo`等程序不会（除非通过`sudo`执行shell，如`sudo bash`）。
