Replace `匹配规则` with `替换规则`

--- a/命令行输出替换/0. 样例教程.md
+++ b/命令行输出替换/0. 样例教程.md
@@ -8,7 +8,7 @@
 
 ## 1. 获取应用程序的输出
 
-假如说我们想要自定义`clang`编译器中的一个错误提示。如果我们的测试文件时`test.c`，我们可以使用`clitheme-exec --showchars clang test.c`来获取包含终端控制符号的输出。编写匹配规则时需要考虑到这些终端控制符号；这是为什么我们要获取**包含终端控制符号**的输出。你也可以使用`--nosubst`来获取未替换过的输出，如果你已经设定了主题。
+假如说我们想要自定义`clang`编译器中的一个错误提示。如果我们的测试文件时`test.c`，我们可以使用`clitheme-exec --showchars clang test.c`来获取包含终端控制符号的输出。编写替换规则时需要考虑到这些终端控制符号；这是为什么我们要获取**包含终端控制符号**的输出。你也可以使用`--nosubst`来获取未替换过的输出，如果你已经设定了主题。
 
 你可以使用`--debug`选项来在每一行输出前加上标记。~~这个标记会包含输出为stdout或stderr的信息（通过`o`和`e`表达）。~~
 
@@ -44,15 +44,15 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 在这个样例中，我们将自定义`unknown type name`的错误提示`incompatible pointer types`的警告提示。
 
-## 2. 编写定义文件和匹配规则
+## 2. 编写定义文件和替换规则
 
-知道输出内容后，是时候编写定义文件和匹配规则了。
+知道输出内容后，是时候编写定义文件和替换规则了。
 
 ### 为输出编写正则表达式
 
 我们可以为这些输出编写正则表达式**替换规则**。如需了解正则表达式和Python的正则表达式语法，你可以参考[Python官方文档中的这篇文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
 
-为了防止不小心替换无关的内容输出，我们在这个样例中会从行的开头开始匹配内容（平时写匹配规则时不需要都这样子做），包括前面的文件和行数信息（如`test.c:1:1:`）。但是，这里不需要匹配行中的所有内容，所以无需考虑行结尾的无关内容。
+为了防止不小心替换无关的内容输出，我们在这个样例中会从行的开头开始匹配内容（平时写替换规则时不需要都这样子做），包括前面的文件和行数信息（如`test.c:1:1:`）。但是，这里不需要匹配行中的所有内容，所以无需考虑行结尾的无关内容。
 
 > 我们拿这行输出举例（这篇文档中的`{{ESC}}`会在编写定义文件时被替换成ASCII Escape字符）：
 > 
@@ -79,7 +79,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 这里的`\g<组名>`语法会将上方匹配表达式匹配到的分组内容放到替换内容中（Python正则表达式引擎语法）。这里使用`\g<prefix>`是为了保留输出的前缀（`test.c:1:1:`），并且这里使用的`\g<name1>`和`\g<name2>`是为了保留名称类型（比如输出中的`char *`和`int *`）。
 
-### 编写匹配规则和定义文件
+### 编写替换规则和定义文件
 
 我们现在可以把这些替换规则放进一个定义文件中了。以下内容是根据上述的内容编写的主题定义文件，包括另一个提示输出（`unknown type name`那一行）：
 
