--- a/命令行输出替换/2. 使用clitheme-exec.md
+++ b/命令行输出替换/2. 使用clitheme-exec.md
@@ -1,6 +1,6 @@
 # 使用`clitheme-exec`命令行工具
 
-使用`clitheme-exec`执行命令行指令以应用主题定义文件中的输出匹配规则。你可以使用输出调试选项来获得所需的输出信息，更好的编写匹配规则。
+使用`clitheme-exec`执行命令行指令以应用主题定义文件中的输出替换规则。你可以使用输出调试选项来获得所需的输出信息，更好的编写替换规则。
 
 你可以使用`clitheme-exec`或`python3 -m clitheme.exec`：
 
@@ -48,7 +48,7 @@ $ sudo clitheme-exec some-command
 
 `clitheme-exec`目前支持以下输出调试选项：
 
-- `--debug`：在每一行输出的前面加上标记。这个标记会包含输出是否为stdout或stderr、匹配规则有没有更改输出等信息。
+- `--debug`：在每一行输出的前面加上标记。这个标记会包含输出是否为stdout或stderr、替换规则有没有更改输出等信息。
     - 标记符号为`o`时，表示该输出为standard output（`stdout`）
     - ~~标记符号为`e`时，表示该输出为standard error（`stderr`）~~
     - 标记符号的背景颜色：
