--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -91,9 +91,9 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 > [!TIP]
 > 更多选项和功能（如行边界、内容变量、仅匹配前台进程输出）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
 
-- 主题定义文件中的匹配规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
+- 主题定义文件中的替换规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
     - **这意味着你可以通过多个替换规则来更改/替换一行的输出，但需要考虑之前规则替换的内容**
-- 如果匹配规则的匹配文本/表达式、命令限制条件、和stdout/stderr限制设定于之前的规则相同，将被视为重复规则，并且之前的规则会被删除
+- 如果替换规则的匹配文本/表达式、命令限制条件、和stdout/stderr限制设定于之前的规则相同，将被视为重复规则，并且之前的规则会被删除
 - 如果执行替换规则的时间超过**0.4秒**，则会视为超时，并且会输出未处理过的内容
 - 不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容
 
@@ -101,7 +101,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ```plaintext
 {substrules_section}
-    # substesc和endmatchhere选项会对以下所有的匹配规则生效
+    # substesc和endmatchhere选项会对以下所有的替换规则生效
     (set_options) endmatchhere substesc
     [subst_string] Some text
         [default]
@@ -154,9 +154,9 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {/substrules_section}
 ```
 
-## 限制匹配规则适用的命令
+## 限制替换规则适用的命令
 
-为了防止一个匹配规则在另一个无关的应用程序被应用，你可以为匹配规则限制适用的命令。
+为了防止一个替换规则在另一个无关的应用程序被应用，你可以为替换规则限制适用的命令。
 
 ```plaintext
 {substrules_section}
@@ -188,12 +188,12 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {/substrules_section}
 ```
 
-- 在`[filter_cmds]`中输入命令以设定限制。定义后，之后定义的匹配规则仅会对这些命令生效。
+- 在`[filter_cmds]`中输入命令以设定限制。定义后，之后定义的替换规则仅会对这些命令生效。
     - 你可以同时指定多个命令；只需要通过换行分开就可以了
     - 你可以指定带有选项的命令（如`rm -r -f`和`example-app do-something -e`）
 - 你也可以使用`<filter_cmd> <命令>`来指定单个命令；这样输入起来会更便捷
 - 你也可以使用`[filter_cmds_regex]`或`<filter_cmd_regex>`通过正则表达式匹配命令。检查时会尝试匹配命令的开头（会在表达式前加上`^`符号）。
-- 使用`<unset_filter_cmd>`来取消设定限制。设定后，之后定义的匹配规则不会拥有命令限制。
+- 使用`<unset_filter_cmd>`来取消设定限制。设定后，之后定义的替换规则不会拥有命令限制。
 
 > [!NOTE]
 >  如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
@@ -222,4 +222,4 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ## 应用主题（`clitheme apply-theme`）
 
-主题定义文件写好后，你需要应用这个文件到系统中。请在终端执行`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-exec`来使用这些匹配规则。详见[使用clitheme-exec](2.%20使用clitheme-exec.md)。
+主题定义文件写好后，你需要应用这个文件到系统中。请在终端执行`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-exec`来使用这些替换规则。详见[使用clitheme-exec](2.%20使用clitheme-exec.md)。
