--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -10,7 +10,7 @@
 
 ```plaintext
 {substrules_section}
-    # substesc和endmatchhere选项会对以下所有的匹配规则生效
+    # substesc和endmatchhere选项会对以下所有的替换规则生效
     (set_options) endmatchhere substesc
     [subst_string] |Some text|
         [default]
@@ -106,7 +106,7 @@
 - ~~`subststdoutonly`：仅匹配standard output的输出内容~~
 - ~~`subststderronly`：仅匹配standard error的输出内容~~
 - ~~`substallstreams`：**默认设定；用于重置之前设定**；匹配所有内容~~
-- `endmatchhere`：如果替换规则与当前输出内容成功匹配时，不会在对应的行数上应用文件中剩余的匹配规则
+- `endmatchhere`：如果替换规则与当前输出内容成功匹配时，不会在对应的行数上应用文件中剩余的替换规则
     - 使用`noendmatchhere`取消设定
     - 对于剩余的多行替换规则，会检查其对应的行数是否涉及之前带有`endmatchhere`的替换
 - `foregroundonly`（**仅在Unix系统上有效**）：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
@@ -130,7 +130,7 @@ bash-3.2$
 以下几个选项仅适用于`filter_command`或`[filter_commands]`段落：
 - `strictcmdmatch`：用户输入的命令内容必须匹配命令匹配条件的开始（和默认的匹配参数不同）；比如说用户输入的`command --get-operation thing`在这个模式下会匹配到`command --get-operation thing --another`，但是不会匹配到`command --another thing --get-operation`
 - `exactcmdmatch`：用户输入的命令必须与匹配条件完全相同；比如说用户输入的`command --get-operations --strict`会匹配到`command --get-operations --strict`，但是不会匹配到`command --get-operations`
-    - 带有此选项的命令匹配条件拥有最高的匹配规则执行优先级
+    - 带有此选项的命令匹配条件拥有最高的替换规则执行优先级
 - `smartcmdmatch`：处理命令匹配条件时，把一个`-`开头的命令选项拆分成单个选项（e.g. `-rfc`处理时会被视为`-r -f -c`）；比如说用户输入的`rm -rf folder`会匹配到`rm -r`和`rm -f`，并且用户输入的`rm -r -f folder`会匹配到`rm -rf`。
     - 单个`-`之后的字符（无论字母和数字）都会被这样处理
     - 起始与多个横杠的语句（`--`）将不会被这样处理
