Use new section specifier names

--- a/命令行输出替换/0. 样例教程.md
+++ b/命令行输出替换/0. 样例教程.md
@@ -84,16 +84,16 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 我们现在可以把这些替换规则放进一个定义文件中了。以下内容是根据上述的内容编写的主题定义文件，包括另一个提示输出（`unknown type name`那一行）：
 
 ```plaintext
-# 在header_section中定义一些关于该主题定义的基本信息（必须定义）
-{header_section}
+# 在header中定义一些关于该主题定义的基本信息（必须定义）
+{header}
     # 需要至少包括name信息
     name: clang样例主题
     [description]
         一个为clang打造的的样例主题，为了演示作用
     [/description]
-{/header_section}
+{/header}
 
-{substrules_section}
+{substrules}
     # 设定"substesc"选项：内容中的"{{ESC}}"字样会被替换成ASCII Escape终端控制符号
     (set_options) substesc
     # 命令限制条件：以下的替换规则仅会在以下命令中被应用。建议设定这个条件，因为可以尽量防止不应该的输出替换。
@@ -109,7 +109,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
         [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
             default: \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
         [/subst_regex]
-{/substrules_section}
+{/substrules}
 ```
 
 #### 内容变量
@@ -117,7 +117,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 这时，你可能注意到这两个正则表达式都有相同的匹配内容（`prefix`命名组）。如果要写很多个类似的替换规则，复制相同的表达式会变得非常麻烦，并且很难一起修改。我们可以使用[内容变量](../附录：主题定义文件通用语法/内容变量.md)来解决这个问题。以下为使用内容变量后的定义：
 
 ```plaintext
-{substrules_section}
+{substrules}
     (set_options) substesc
     # 设定`substvar`选项启用内容变量功能
     (set_options) substvar
@@ -135,7 +135,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
         [subst_regex] {{match_prefix}}error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
             default: \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
         [/subst_regex]
-{/substrules_section}
+{/substrules}
 ```
 
 > [!TIP]
