--- a/应用程序和字符串定义API/编写主题定义文件/多行文本段落.md
+++ b/应用程序和字符串定义API/编写主题定义文件/多行文本段落.md
@@ -15,7 +15,7 @@
 **提示：** 你可以定义多个语言，省去重复复制粘贴的过程。多个语言由空格分开。
 
 ```plaintext
-{entries_section}
+{entries}
     <...>
     [entry] example-entry
         # 你可以定义多个语言
@@ -26,7 +26,7 @@
         [/locale]
     [/entry]
     <...>
-{/entries_section}
+{/entries}
 ```
 
 应用程序调用`example-entry`时会显示：
