--- a/自定义manpage文档/1. 编写定义文件.md
+++ b/自定义manpage文档/1. 编写定义文件.md
@@ -1,4 +1,4 @@
-# 主题定义文件中`manpage_section`
+# 编写定义文件：manpage文档
 
 本文章将介绍[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)中的`manpage`段落语法。这个段落允许你添加自定义的Unix文档手册（`manpage`）文档，达到文档自定义的目的。
 
@@ -14,14 +14,14 @@
 
 在定义文件中，文件路径中的子路径是由空格分开的，不是以划线分开的，并且不能包含任何划线（`/`、`\`）。所以说，`man1/<name>.1`应该在定义文件中写成`man1 <name>.1`。
 
-## `manpage`段落
+## `manpages`段落
 
-在定义文件中，所有的Unix文档手册都是在`manpage`段落中实现的。请使用以下语法定义`manpage`段落：
+在定义文件中，所有的Unix文档手册都是在`manpages`段落中实现的。请使用以下语法定义`manpages`段落：
 
 ```plaintext
-{manpage_section}
+{manpages}
     <在这里定义manpage文档>
-{/manpage_section}
+{/manpages}
 ```
 
 ### 文件内容：`[file_content]`
@@ -33,7 +33,7 @@
 你可以同时指定多个`[file_content]`语句，以在同一文件内容下覆盖多个文档文件。它们必须指定与相邻的`[file_content]`语句之后，**并且中间可以有空行或注释**。在其他内容后插入`[file_content]`语句会被视为文件内容，而不是语法定义。
 
 ```plaintext
-{manpage_section}
+{manpages}
     [file_content] man1 clitheme-man.1
     [file_content] man8 clitheme-man.8
         .TH clitheme-man 1 2024-05-07
@@ -50,7 +50,7 @@
         .SH SEE ALSO
         \fIclitheme(1)\fR, \fIman(1)\fR
     [/file_content]
-{/manpage_section}
+{/manpages}
 ```
 
 > [!TIP]
@@ -63,7 +63,7 @@
 你也可以使用`[include_file]`段落来指定多个目标文件，以使用同一个源文件来覆盖多个文档。
 
 ```plaintext
-{manpage_section}
+{manpages}
     # 如果主题定义文件的路径是"Documents/example-doc.clithemedef.txt"，那引用的文件会从"Documents/doc_manpages/example-app.1"读取
     <include_file> doc_manpages example-app.1
         as: man1 example-app.1
@@ -73,7 +73,7 @@
         as: man1 app-example.1
         as: man1 example.1
     [/include_file]
-{/manpage_section}
+{/manpages}
 ```
 
 ## 应用主题（`clitheme apply-theme`）
