--- a/附录：主题定义文件通用语法/内容变量.md
+++ b/附录：主题定义文件通用语法/内容变量.md
@@ -7,11 +7,11 @@
 你可以在段落之外或在段落内定义变量。如需定义变量，请使用`setvar[<变量名称>]: <内容>`语法。请注意，变量名称不能包含`(){}[]`中的任一字符，并且不能为`ESC`（因为会和`substesc`功能选项冲突）。
 
 ```plaintext
-{substrules_section}
+{substrules}
     setvar[example_var]: This is some example content
     setvar[var2]: Another example variable
     # <...>
-{/substrules_section}
+{/substrules}
 # 你也可以在段落之外定义变量（全局定义）
 setvar[another_var]: Some variable content
 setvar[var3]: Third variable!
@@ -28,12 +28,12 @@ setvar[var3]: Third variable!
 ```plaintext
 setvar[name]: Vim
 (set_options) substvar
-{header_section}
+{header}
     name: {{name}} theme
     version: 9.1
     description: A simple theme for {{name}}
     supported_apps: {{name}}
-{/header_section}
+{/header}
 ```
 
 需要注意的是，变量不能替代语法定义。这意味着你不能使用以下语法：
@@ -42,11 +42,11 @@ setvar[name]: Vim
 (set_options) substvar
 setvar[place1]: name
 setvar[place2]: version
-{header_section}
+{header}
     # 错误用法：
     {{place1}} Vim theme
     {{place2}} 9.1
-{/header_section}
+{/header}
 ```
 
 这意味着内容变量可以在任何**不是语法词语**的地方使用。
