--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -32,7 +32,7 @@ LC_ALL=
 在多行文本段落段落下，你可以同时定义多个语言，省去重复复制粘贴内容的过程。
 
 ```plaintext
-{entries_section}
+{entries}
     # ...
     [entry] com.example example-app example-entry
         default: Your entry text here
@@ -45,8 +45,8 @@ LC_ALL=
             你的定义文本
         [/locale]
     [/entry]
-{/entries_section}
-{substrules_section}
+{/entries}
+{substrules}
     # ...
     [subst_string] Some example output message
         default: Output message! :)
@@ -56,7 +56,7 @@ LC_ALL=
             Output message! :)
         [/locale]
     [/subst_string]
-{/substrules_section}
+{/substrules}
 ```
 
 ## frontend模块：设定语言和禁用语言检测
