--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -11,9 +11,9 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 在主题定义文件中，所有的输出替换规则和定义都是定义在文件中`substrules`段落的。请使用以下语法定义`substrules`段落。
 
 ```plaintext
-{substrules_section}
+{substrules}
     <在这里定义规则>
-{/substrules_section}
+{/substrules}
 ```
 
 ## 定义替换规则
@@ -25,7 +25,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 定义字符串规则的语法如下：
 
 ```plaintext
-{substrules_section}
+{substrules}
     # 把"{{ESC}}"替换为ANSI Escape字符：
     (set_options) substesc
 
@@ -52,7 +52,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         # 或者：
         locale[<default或其他系统语言（locale）>]: <替换文本内容>
     [/subst_regex]
-{/substrules_section}
+{/substrules}
 ```
 
 - **单行匹配**：在`[subst_string]`之后输入要匹配/查找的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式
@@ -100,7 +100,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 ### 样例
 
 ```plaintext
-{substrules_section}
+{substrules}
     # substesc和endmatchhere选项会对以下所有的替换规则生效
     (set_options) endmatchhere substesc
     [subst_string] Some text
@@ -122,7 +122,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         # 否则，会使用以下定义：
         default: (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
     [/subst_regex]
-{/substrules_section}
+{/substrules}
 ```
 
 ### 同时指定多个匹配表达式
@@ -133,7 +133,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 >  不能同时指定`[subst_string]`或`[subst_regex]`语句（两者不能在同一个规则定义中混用）
 
 ```plaintext
-{substrules_section}
+{substrules}
     [subst_string] Some text 1
     [subst_string] Some another text
         default: Some substitution text
@@ -151,7 +151,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     # [subst_regex] Some regex 1
     #     default: Some substitution text
     # [/subst_string]
-{/substrules_section}
+{/substrules}
 ```
 
 ## 限制替换规则适用的命令
@@ -159,7 +159,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 为了防止一个替换规则在另一个无关的应用程序被应用，你可以为替换规则限制适用的命令。
 
 ```plaintext
-{substrules_section}
+{substrules}
     [filter_cmds]
         <由换行分开的多个命令>
     [/filter_cmds]
@@ -185,7 +185,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     [subst_regex]
         <...>
     [/subst_regex]
-{/substrules_section}
+{/substrules}
 ```
 
 - 在`[filter_cmds]`中输入命令以设定限制。定义后，之后定义的替换规则仅会对这些命令生效。
