--- a/应用程序和字符串定义API/编写主题定义文件/基本用法.md
+++ b/应用程序和字符串定义API/编写主题定义文件/基本用法.md
@@ -1,6 +1,6 @@
-# 主题定义文件的基本语法
+# 编写定义文件：字符串定义
 
-本文章将会介绍如何为你喜爱的应用程序编写[主题定义文件](../../附录：主题定义文件通用语法/文件格式和语法.md)，以自定义它们的文本输出。
+本文章将会介绍如何为你喜爱的应用程序编写[主题定义文件](../../附录：主题定义文件通用语法/文件格式和语法.md)和字符串定义，以自定义它们的文本输出。
 
 ## 编写`header`段落
 
@@ -10,9 +10,9 @@
 
 所有的字符串定义会被包括在`entries`段落中。请使用和`header`段落相同的格式定义`entries`段落：
 
-    {entries_section}
+    {entries}
         <...>
-    {/entries_section}
+    {/entries}
 
 ### 使用`[entry]`定义
 
@@ -29,14 +29,14 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 下面将展示一个样例：
 
 ```plaintext
-{entries_section}
+{entries}
     # ...
     [entry] com.example example-app text-one
         default: Some text
         locale[en_US]: Some text
         locale[zh_CN]: 一些文本
     [/entry]
-{/entries_section}
+{/entries}
 ```
 
 > [!TIP]
@@ -56,7 +56,7 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 >  使用`<in_domainapp>`和`<unset_domainapp>`时会同时取消定义之前设定的`<in_subsection>`信息。
 
 ```plaintext
-{entries_section}
+{entries}
     <in_domainapp> com.example example-app
         # 和 com.example example-app entry-one 相同
         [entry] entry-one
@@ -76,7 +76,7 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
             [/entry]
     # 会同时取消定义subsection
     <unset_domainapp>
-{/entries_section}
+{/entries}
 ```
 
 ### 同时指定多个路径名称
@@ -84,7 +84,7 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 在字符串定义内容相同的情况下，你可以为一个字符串定义添加多个路径名称。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[entry]`语句，比如：
 
 ```plaintext
-{entries_section}
+{entries}
     [entry] entry-one
     [entry] another-entry
         default: Some string definition content
@@ -96,7 +96,7 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
     [entry] another-entry
         default: Some string definition content
     [/entry]
-{/entries_section}
+{/entries}
 ```
 
 ## 编写字符串的一些注意事项
