--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -9,7 +9,7 @@
 你也可以对单个段落设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`(set_options)`设定的选项设置。比如说：`[/subst_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
 
 ```plaintext
-{substrules_section}
+{substrules}
     # substesc和endmatchhere选项会对以下所有的替换规则生效
     (set_options) endmatchhere substesc
     [subst_string] |Some text|
@@ -29,7 +29,7 @@
         locale[zh_CN]: (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
         default: (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
     [/subst_regex]
-{/substrules_section}
+{/substrules}
 ```
 
 ### 全局定义和段落内定义的区别
