--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -112,7 +112,7 @@
 - `foregroundonly`（**仅在Unix系统上有效**）：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
     - 使用`noforegroundonly`取消设定
     - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
-    - 你也可以在命令限制条件中指定该选项（如`[/filter_commands] foregroundonly`），以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
+    - 你也可以在命令限制条件中指定该选项（如`[/filter_cmds] foregroundonly`），以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
     - **注意：** 经测试，只有shell等应用程序会在执行其他命令时修改自己的前台状态；`sudo`等程序不会（除非通过`sudo`执行shell，如`sudo bash`）。
     - **注意：** 大多数shell程序（`bash`、`zsh`、`csh`）的命令执行错误提示（如`command not found`、`permission denied`等）会通过创建的另一个进程输出，并且shell会在后台运行。这会导致带有该选项的命令限制规则和对应的替换规则在这些提示输出上不会被应用：
 
@@ -127,7 +127,7 @@ bash-3.2$
 
 ### 命令限制规则
 
-以下几个选项仅适用于`filter_command`或`[filter_commands]`段落：
+以下几个选项仅适用于`<filter_cmd>`或`[filter_cmds]`段落：
 - `strictcmdmatch`：用户输入的命令内容必须匹配命令匹配条件的开始（和默认的匹配参数不同）；比如说用户输入的`command --get-operation thing`在这个模式下会匹配到`command --get-operation thing --another`，但是不会匹配到`command --another thing --get-operation`
 - `exactcmdmatch`：用户输入的命令必须与匹配条件完全相同；比如说用户输入的`command --get-operations --strict`会匹配到`command --get-operations --strict`，但是不会匹配到`command --get-operations`
     - 带有此选项的命令匹配条件拥有最高的替换规则执行优先级
