Revise content variables documentation

--- a/附录：主题定义文件通用语法/内容变量.md
+++ b/附录：主题定义文件通用语法/内容变量.md
@@ -4,18 +4,24 @@
 
 ## 定义变量
 
-你可以在段落之外或在段落内定义变量。如需定义变量，请使用`setvar[<变量名称>]: <内容>`语法。请注意，变量名称不能包含`(){}[]`中的任一字符，并且不能为`ESC`（因为会和`substesc`功能选项冲突）。
+你可以在段落之外或在段落内定义变量。如需定义变量，请使用`setvar[<变量名称>]: <内容>`语法。
+
+你也可以同时指定多个由空格分开的变量名称，如`setvar[var1 var2]:`。
 
 ```plaintext
 {substrules}
     setvar[example_var]: This is some example content
-    setvar[var2]: Another example variable
+    # 同时设定var1和var2变量为"Another example variable"
+    setvar[var1 var2]: Another example variable
     # <...>
 {/substrules}
 # 你也可以在段落之外定义变量（全局定义）
 setvar[another_var]: Some variable content
 setvar[var3]: Third variable!
 ```
+
+> [!IMPORTANT]
+> 请注意，变量名称不能包含`(){}[]`中的任一字符，并且不能为`ESC`（因为会和`substesc`功能选项冲突）。
 
 ### 全局定义和段落内定义的区别
 
@@ -36,6 +42,24 @@ setvar[name]: Vim
 {/header}
 ```
 
+> [!TIP]
+> 你也可以在指定系统语言的地方使用内容变量，比如：
+
+```plaintext
+{substrules}
+    (enable_subst)
+    setvar[langs]: en_US C
+    [subst_regex] Some content
+        # 等于"locale[en_US C]:"
+        locale[{{langs}}]: Substitute content
+        # 等于"[locale] en_US C"
+        [locale] {{langs}}
+            Substitute content
+        [/locale]
+    [/subst_regex]
+{/substrules}
+```
+
 需要注意的是，变量不能替代语法定义。这意味着你不能使用以下语法：
 
 ```plaintext
@@ -44,18 +68,14 @@ setvar[place1]: name
 setvar[place2]: version
 {header}
     # 错误用法：
-    {{place1}} Vim theme
-    {{place2}} 9.1
+    # {{place1}} Vim theme
+    # {{place2}} 9.1
 {/header}
 ```
 
-这意味着内容变量可以在任何**不是语法词语**的地方使用。
-
 > [!NOTE]
->  变量名称中不能包含任何空格，否则将不会被处理。比如：`{{var }}`和`{{this and}}`将不会被处理
-
-> [!NOTE]
->  如果变量内容中带有`{{ESC}}`字样，且`substesc`选项是设定的，变量内容中的`{{ESC}}`在定义时不会被处理；只会在相应地方和定义使用中才会被处理。
+> - 变量名称中不能包含任何空格，否则将不会被处理。比如：`{{var }}`和`{{this and}}`将不会被处理
+> - 如果变量内容中带有`{{ESC}}`字样，且`substesc`选项是设定的，变量内容中的`{{ESC}}`在定义时不会被处理；只会在相应地方和定义使用中才会被处理。
 
 如需禁用变量替换，请取消设定`substvar`选项（使用`set_options nosubstvar`）。更多信息请见[可以设定的选项](./可以设定的选项.md)。
 
