--- a/应用程序和字符串定义API/编写定义文件.md
+++ b/应用程序和字符串定义API/编写定义文件.md
@@ -1,10 +1,10 @@
 # 编写定义文件：字符串定义
 
-本文章将会介绍如何为你喜爱的应用程序编写[主题定义文件](../../附录：主题定义文件通用语法/文件格式和语法.md)和字符串定义，以自定义它们的文本输出。
+本文章将会介绍如何为你喜爱的应用程序编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)和字符串定义，以自定义它们的文本输出。
 
 ## 编写`header`段落
 
-你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../../附录：主题定义文件通用语法/header段落.md)
+你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落.md)
 
 ## 使用`entries`段落
 
@@ -20,7 +20,9 @@
 
 CLItheme的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale[<语言>]: <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
 
-`locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../../附录：主题定义文件通用语法/多语言支持.md)）
+`locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)）
+
+你可以同时指定多个系统语言，比如`locale[en_US default]:`。
 
 定义字符串时建议添加`default`语言（也可以使用`default: <字符串>`语法）。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
 
@@ -35,18 +37,59 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
         default: Some text
         locale[en_US]: Some text
         locale[zh_CN]: 一些文本
+        # 你也可以同时指定多个语言，如en_US和default：
+        locale[en_US default]: Some text
     [/entry]
 {/entries}
 ```
 
 > [!TIP]
-> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../../附录：主题定义文件通用语法/可以设定的选项.md)
+> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
+
+### 多行文本段落
+
+字符串定义也支持多行文本段落，并且通过`[locale] <语言>`定义。
+
+你可以定义多个语言，省去重复复制粘贴的过程。多个语言由空格分开。
+
+你也可以使用`[default]`定义来替代`[locale] default`。
+
+```plaintext
+{entries}
+    <...>
+    [entry] example-entry
+        # 你可以定义多个语言
+        [locale] en_US C
+            This is an entry
+            Another line like that
+            A new line
+        [/locale]
+        # 你也可以使用`[default]`定义：
+        [default]
+            This is an entry
+            Another line like that
+            A new line
+        [/default]
+    [/entry]
+    <...>
+{/entries}
+```
+
+应用程序调用`example-entry`时会显示：
+
+```plaintext
+This is an entry
+Another line like that
+A new line
+```
+
+> 关于内容缩进机制和更多信息，请见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md)。
 
 ### 使用`<in_domainapp>`和`<in_subsection>`
 
 你可以使用`<in_domainapp>`和`<in_subsection>`以节省文件中的代码量。被定义时，这个信息会自动被添加在所有的`[entry]`定义前，以`<domain> <app> <subsections> <路径>`的格式处理。
 
-如需了解关于子路径的更多信息，请参考[**路径名称和数据结构**](../应用程序适配/1.%20路径名称和数据结构.md)。
+如需了解关于子路径的更多信息，请参考[**路径名称和数据结构**](应用程序适配/1.%20路径名称和数据结构.md)。
 
 `<in_domainapp>`的格式为`<in_domainapp> <domain> <app>`，并且只能指定两个名称。`<in_subsection>`的格式为`<in_subsection> <subsection[s]>`，并且可以有多个subsection。
 
