Add multi-line example to specifying multiple match expressions

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -136,6 +136,9 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {substrules}
     [subst_string] Some text 1
     [subst_string] Some another text
+    [subst_string>>
+        Multi-line text
+    <<subst_string]
         default: Some substitution text
     [/subst_string]
     # 上方定义等于以下定义：
@@ -143,6 +146,11 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         default: Some substitution text
     [/subst_string]
     [subst_string] Some another text
+        default: Some substitution text
+    [/subst_string]
+    [subst_string>>
+        Multi-line text
+    <<subst_string]
         default: Some substitution text
     [/subst_string]
 
