Add info about specifying options after line boundaries

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -222,10 +222,8 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 ```
 
 ```plaintext
-(set_options) strictcmdmatch
-<filter_cmd> example-app some-opt
-# 为后续规则重置设定：
-(set_options) normalcmdmatch
+(set_options) linebounds
+<filter_cmd> |example-app some-opt| strictcmdmatch
 ```
 
 ## 应用主题（`clitheme apply-theme`）
