--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -4,9 +4,11 @@
 
 ## 如何设定选项
 
-你可以使用`(set_options) <选项>`语法来设定选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在之后的所有相关定义。比如：`(set_options) substesc substvar leadtabs:1`
+你可以使用`(set_options) <选项>`语法来设定全局选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在之后的所有相关定义。比如：`(set_options) substesc substvar leadtabs:1`
 
 你也可以对单个段落设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`(set_options)`设定的选项设置。比如说：`[/subst_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
+
+如需对单行定义设定选项，请启用并使用行边界功能（`linebounds`选项），并在其结尾添加选项设定。比如：`default: |Content {{var}}| substvar`
 
 ```plaintext
 {substrules}
@@ -23,11 +25,15 @@
             Another good stuff
         [/default]
     [/subst_string] noendmatchhere foregroundonly
-    # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
+    # 上方定义的noendmatchhere会覆盖之前在(set_options)中定义的endmatchhere
+    (set_options) linebounds
+    # 如果想对以下内容设定选项，需要使用行边界
+    <filter_cmd> |example-app| strictcmdmatch
+    setvar[tot]: (ToT)/~~~
     [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
-        # 如果想对以下内容设定选项，需要使用多行文本段落
-        locale[zh_CN]: (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
-        default: (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
+        # 对以下内容启用`substvar`选项
+        locale[zh_CN]: |{{tot}} 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)| substvar
+        default: |{{tot}} Error at file number \g<num>! Could not find item "\g<name>"!| substvar
     [/subst_regex]
 {/substrules}
 ```
@@ -93,10 +99,10 @@
 > [!TIP]
 > 你可以使用`(enable_subst)`语句一键启用以上所有的内容替换选项，并可以使用`(disable_subst)`语句一键禁用。
 > ```plaintext
-> # 相当于`set_options substvar substesc substchar linebounds`
+> # 相当于`(set_options) substvar substesc substchar linebounds`
 > (enable_subst)
 > setvar[var2]: |Some content {{var}} {{ESC}} {{[U00030edd]}}|
-> # 相当于`set_options nosubstvar nosubstesc nosubstchar nolinebounds`
+> # 相当于`(set_options) nosubstvar nosubstesc nosubstchar nolinebounds`
 > (disable_subst)
 > ```
 
