Fix char subst options description

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -77,12 +77,6 @@
 
 以下选项适用于定义文件中的大多数文本内容和多行文本段落。以下选项中可以使用`no<选项名称>`禁用该选项设定，比如`nosubstesc`。
 
-- `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](./内容变量.md)）
-    - 当该选项在`[/entry]`语句后指定，会应用在路径名称上
-- `substesc`：将内容中的`{{ESC}}`替换为终端ESC（ASCII Escape）字符（`\x1b`）
-    - **该选项仅适用于这些地方：**`header`段落中的`description`定义；`substrules`段落中的匹配和替换内容；`entries`中的字符串定义内容
-- `substchar`：使用字符编码输入特殊字符；支持`{{[xXX]}}`、`{{[uXXXX]}}`、和`{{[UXXXXXXXX]}}`格式（和Python字符串相似）
-    - 该选项仅适用于支持`substesc`的地方
 - `linebounds`：支持在部分内容中指定行边界，以在开端和末尾中插入空格。如需使用，请启用该选项并在对应的内容的开头和末尾添加`|`字符。
     - 该选项启用后，所有以`|`字符开头的内容必须在末尾插入相同字符，否则会提示语法错误
     - **部分地方（如`[entry]`和`<in_subsection>`后的路径、文件路径、语言定义等）即使使用行边界，依然不会保留首末空格**
@@ -95,6 +89,14 @@
     default: |  Replace content|new content |
 [/subst_regex]
 ```
+
+- `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](./内容变量.md)）
+    - 当该选项在`[/entry]`语句后指定，会应用在路径名称上
+
+以下选项仅适用于`substrules`段落中的匹配和替换内容和`entries`中的字符串定义内容：
+
+- `substesc`：将内容中的`{{ESC}}`替换为终端ESC（ASCII Escape）字符（`\x1b`）
+- `substchar`：使用字符编码输入特殊字符；支持`{{[xXX]}}`、`{{[uXXXX]}}`、和`{{[UXXXXXXXX]}}`格式（和Python字符串相似）
 
 > [!TIP]
 > 你可以使用`(enable_subst)`语句一键启用以上所有的内容替换选项，并可以使用`(disable_subst)`语句一键禁用。
