Revise content variables documentation

--- a/附录：主题定义文件通用语法/内容变量.md
+++ b/附录：主题定义文件通用语法/内容变量.md
@@ -25,30 +25,33 @@ setvar[var3]: Third variable!
 
 ### 全局定义和段落内定义的区别
 
-在全局定义是指在段落外定义的变量。段落内定义的变量只会在该段落内有效。结束该段落后，当前的变量定义将会复原成现有的全局定义。该规则也同样适用于给现有的变量改变/重新赋值内容的操作。
+在全局定义是指在段落外定义的变量。**段落内定义的变量只会在该段落内有效**。结束该段落后，当前的变量定义将会复原成现有的全局定义。该规则也同样适用于给现有的变量改变/重新赋值内容的操作。
 
 ## 使用变量
 
-如需使用变量，请先设定`substvar`选项（使用`set_options substvar`），然后在内容中使用`{{<变量名称>}}`语法，比如`{{example_var}}`。样例：
+如需使用变量，请先[启用](./可以设定的选项.md#如何设定选项)`substvar`选项（使用`set_options substvar`），然后在内容中使用`{{<变量名称>}}`语法，比如`{{example_var}}`。
 
 ```plaintext
 setvar[name]: Vim
 (set_options) substvar
 {header}
     name: {{name}} theme
-    version: 9.1
     description: A simple theme for {{name}}
-    supported_apps: {{name}}
 {/header}
+{substrules}
+    [subst_string] {{name}} 9.1
+        default: {{name}} Improved 9.1+
+    [/subst_string]
+{/substrules}
 ```
 
-> [!TIP]
-> 你也可以在指定系统语言的地方使用内容变量，比如：
+你也可以在指定**系统语言**和**选项设定**的地方使用内容变量，比如：
 
 ```plaintext
 {substrules}
     (enable_subst)
     setvar[langs]: en_US C
+    setvar[opts]: strictcmdmatch endmatchhere
     [subst_regex] Some content
         # 等于"locale[en_US C]:"
         locale[{{langs}}]: Substitute content
@@ -56,7 +59,8 @@ setvar[name]: Vim
         [locale] {{langs}}
             Substitute content
         [/locale]
-    [/subst_regex]
+    # 将会设定strictcmdmatch和endmatchhere选项
+    [/subst_regex] {{opts}}
 {/substrules}
 ```
 
@@ -64,8 +68,8 @@ setvar[name]: Vim
 
 ```plaintext
 (set_options) substvar
-setvar[place1]: name
-setvar[place2]: version
+setvar[place1]: name:
+setvar[place2]: version:
 {header}
     # 错误用法：
     # {{place1}} Vim theme
@@ -74,10 +78,8 @@ setvar[place2]: version
 ```
 
 > [!NOTE]
-> - 变量名称中不能包含任何空格，否则将不会被处理。比如：`{{var }}`和`{{this and}}`将不会被处理
+> - 变量名称中不能包含任何空格，否则将不会被处理。比如：`{{var }}`和`{{this and}}`
 > - 如果变量内容中带有`{{ESC}}`字样，且`substesc`选项是设定的，变量内容中的`{{ESC}}`在定义时不会被处理；只会在相应地方和定义使用中才会被处理。
-
-如需禁用变量替换，请取消设定`substvar`选项（使用`set_options nosubstvar`）。更多信息请见[可以设定的选项](./可以设定的选项.md)。
 
 ## 在变量定义中引用另一个变量的内容
 
