Fix options setting example

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -12,24 +12,18 @@
 
 ```plaintext
 {substrules}
+    setvar[tot]: (ToT)/~~~
     # substesc和endmatchhere选项会对以下所有的替换规则生效
     (set_options) endmatchhere substesc
-    [subst_string] |Some text|
+    [subst_string] Some other text {{ESC}}
         [default]
-            Some other text here
-            Good stuff {{ESC}}
-        [/default]
-    [/subst_string] linebounds
-    [subst_string] Some other text
-        [default]
-            Another good stuff
-        [/default]
+            Another good stuff {{tot}}
+        [/default] substvar
     [/subst_string] noendmatchhere foregroundonly
     # 上方定义的noendmatchhere会覆盖之前在(set_options)中定义的endmatchhere
     (set_options) linebounds
     # 如果想对以下内容设定选项，需要使用行边界
     <filter_cmd> |example-app| strictcmdmatch
-    setvar[tot]: (ToT)/~~~
     [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
         # 对以下内容启用`substvar`选项
         locale[zh_CN]: |{{tot}} 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)| substvar
