Add content block example to linebounds description

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -81,6 +81,10 @@
 [subst_regex] |Line content  |
     # 内容："  Replace content|new content "
     default: |  Replace content|new content |
+    # 也可以在多行文本段落中使用行边界
+    [default]
+        |Content  |
+    [/default]
 [/subst_regex]
 ```
 
