Replace 内容段落 with 文本段落

--- a/附录：主题定义文件通用语法/内容变量.md
+++ b/附录：主题定义文件通用语法/内容变量.md
@@ -1,6 +1,6 @@
 # 内容变量的定义和使用
 
-你可以在主题定义文件中定义和使用**内容变量**，可以帮助你面去重复复制粘贴内容段落中重复的内容，并且可以更轻松的批量更改内容。
+你可以在主题定义文件中定义和使用**内容变量**，可以帮助你面去重复复制粘贴重复内容，并且可以更轻松的批量更改内容。
 
 ## 定义变量
 
