--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -58,7 +58,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 - **单行匹配**：在`[subst_string]`之后输入要匹配/查找的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式
     - 该规则仅能匹配单行输出。比如，`content(\r\n)content`等正则表达式不会匹配到任何内容；这类规则需使用多行匹配语法。
 - **多行匹配**：在`[subst_string>>`或`[subst_regex>>`段落内输入用于匹配多行输出的文本内容/正则表达式，由`<<subst_string]`或`<<subst_regex]`结束段落
-    - 如需匹配输出中的换行符号，建议把换行后的内容放在表达式的下一行上。**内容段落中的换行会匹配输出中不同类型的换行符**。
+    - 如需匹配输出中的换行符号，建议把换行后的内容放在表达式的下一行上。**文本段落中的换行会匹配输出中不同类型的换行符**。
     - 如需在正则表达式中使用`\r`、`\n`等换行符号，建议通过`clitheme-exec --showchars <命令>`命令核对程序实际输出中使用的换行符号。
     - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md#关于缩进和边缘空格的处理)
 - CLItheme用的是Python内置的的正则表达式引擎，所以需使用Python的正则表达式语法。详细请见[本文章](https://docs.python.org/zh-cn/3/howto/regex.html)
@@ -67,12 +67,12 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 **多行替换：**
 
-- 在`[locale]`内容段落内输入要替换的内容，并在`[locale]`语句之后定义系统语言（locale）：当前的系统语言符合时才会执行替换规则
+- 在`[locale]`文本段落内输入要替换的内容，并在`[locale]`语句之后定义系统语言（locale）：当前的系统语言符合时才会执行替换规则
     - 你可以同时指定多个系统语言，如：`[locale] en_US zh_CN`
     - 如不需要限制系统语言，请使用`default`语言：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义
     - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
     - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md#关于缩进和边缘空格的处理)
-- 如果不需要限制语言，你可以使用`[default]`内容段落（相当于`[locale] default`）
+- 如果不需要限制语言，你可以使用`[default]`文本段落（相当于`[locale] default`）
 
 **单行替换：**
 
