--- a/附录：主题定义文件通用语法/多行文本段落.md
+++ b/附录：主题定义文件通用语法/多行文本段落.md
@@ -4,9 +4,8 @@
 
 如需定义多行文本段落段落，请在支持的定义名称中添加`[`和`]`（比如：`[locales]`, `[description]`），并且使用`[/<name>]`结束段落（如`[/locales]`，`[/description]`。
 
-## 在内容中输入结束语句
-
-如果你想在多行文本段落中输入结束语句（如`[/locale]`等），请在语句前加上`\`符号，如`\[/locale]`等。该语句必须放在一行中的最前面才会被识别并处理，否则前面的`\`符号将不会在最终内容中移除。
+> [!TIP]
+> 如果你想在多行文本段落中输入结束语句（如`[/locale]`等），请在语句前加上`\`符号，如`\[/locale]`等。该语句必须放在一行中的最前面才会被识别并处理，否则前面的`\`符号将不会在最终内容中移除。
 
 ```plaintext
 [default]
@@ -17,6 +16,9 @@
     will also work
 [/default]
 ```
+
+> [!IMPORTANT]
+> 如果文本段落结尾没有额外的空行，内容结尾不会添加换行符。
 
 ## 关于缩进和边缘空格的处理
 
