Increase output subst timeout to 1 second

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -94,7 +94,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 - 主题定义文件中的替换规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
     - **这意味着你可以通过多个替换规则来更改/替换一行的输出，但需要考虑之前规则替换的内容**
 - 如果替换规则的匹配文本/表达式、命令限制条件、和stdout/stderr限制设定于之前的规则相同，将被视为重复规则，并且之前的规则会被删除
-- 如果执行替换规则的时间超过**0.4秒**，则会视为超时，并且会输出未处理过的内容
+- 如果执行替换规则的时间超过1秒，则会视为超时，并且会输出未处理过的内容
 - 不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容
 
 ### 样例
