Rename file extension to `.ctdef.txt`

--- a/自定义manpage文档/1. 编写定义文件.md
+++ b/自定义manpage文档/1. 编写定义文件.md
@@ -64,7 +64,7 @@
 
 ```plaintext
 {manpages}
-    # 如果主题定义文件的路径是"Documents/example-doc.clithemedef.txt"，那引用的文件会从"Documents/doc_manpages/example-app.1"读取
+    # 如果主题定义文件的路径是"Documents/example-doc.ctdef.txt"，那引用的文件会从"Documents/doc_manpages/example-app.1"读取
     <include_file> doc_manpages example-app.1
         as: man1 example-app.1
     # 你也可以使用以下语法来覆盖多个目标文档文件
