--- a/附录：主题定义文件通用语法/文件格式和语法.md
+++ b/附录：主题定义文件通用语法/文件格式和语法.md
@@ -4,7 +4,7 @@
 
 ## 文件扩展名
 
-虽然CLItheme在文件扩展名上没有要求，但是最好将文件的扩展名定义为`.clithemedef.txt`。这样子你可以更好的辨识文件，并且使用`.txt`会确保该文件会被系统使用正确的应用程序（如文本编辑器）打开。
+虽然CLItheme在文件扩展名上没有要求，但建议的扩展名为`.ctdef.txt`。这样子你可以更好的辨识文件，并且使用`.txt`会确保该文件会被系统使用正确的应用程序（如文本编辑器）打开。
 
 ## 文件内容编码
 
