Add note about using underscores in system locale

--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -6,7 +6,7 @@ CLItheme的核心设计理念之一是对多语言的支持。它可以自动检
 
 语言名称必须是系统语言格式，如`zh_CN`和`en_US`。这个名称由两个小写字母的语言名称和两个大写字母的地区名称组成，并且通过一个下划线分开。
 
-> [!TIP]
+> [!NOTE]
 > 有时候，语言名称将会带有格式编码后缀，比如`zh_CN.UTF-8`。**不要包括这个后缀**，否则可能不会匹配到对应的定义。
 
 在Linux系统中，你可以在命令行中使用`locale`命令查看当前系统语言。你可以参考输出中的`LANG`和`LANGUAGE`信息作为语言名称。
@@ -31,6 +31,9 @@ LCID             Name             DisplayName
 ----             ----             -----------
 1033             en-US            English (United States) 
 ```
+
+> [!IMPORTANT]
+> 需确保系统语言名称使用下划线符号；比如，`en-US`需写成`en_US`。
 
 ## 主题定义文件：为字符串定义添加多个语言版本
 
