Fix wording on content variables

--- a/附录：主题定义文件通用语法/内容变量.md
+++ b/附录：主题定义文件通用语法/内容变量.md
@@ -79,7 +79,7 @@ setvar[place2]: version:
 
 > [!NOTE]
 > - 变量名称中不能包含任何空格，否则将不会被处理。比如：`{{var }}`和`{{this and}}`
-> - 如果变量内容中带有`{{ESC}}`字样，且`substesc`选项是设定的，变量内容中的`{{ESC}}`在定义时不会被处理；只会在相应地方和定义使用中才会被处理。
+> - 变量内容的ESC或字符替换表达式**不会在定义变量时被处理**，即使已启用对应的选项；只会在变量被引用时才会被处理（相当于在内容中直接使用表达式）。
 
 ## 在变量定义中引用另一个变量的内容
 
