Add `nlmatchcurpos` option

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -110,6 +110,9 @@
 - ~~`subststdoutonly`：仅匹配standard output的输出内容~~
 - ~~`subststderronly`：仅匹配standard error的输出内容~~
 - ~~`substallstreams`：**默认设定；用于重置之前设定**；匹配所有内容~~
+- `nlmatchcurpos`：在包含多行匹配内容的替换规则中，内容中的换行也会匹配输出中的指针位置控制序列（如`\x1b[5;1H`）
+    - 该选项不会对匹配内容中如`\n`等正则表达式和`{{[x0a]}}`等字符替换生效
+    - **替换的输出内容仍然会使用换行符**，所以请确保匹配的内容仅使用该序列换行，而不是调整到其他的位置
 - `endmatchhere`：如果替换规则与当前输出内容成功匹配时，不会在对应的行数上应用文件中剩余的替换规则
     - 使用`noendmatchhere`取消设定
     - 对于剩余的多行替换规则，会检查其对应的行数是否涉及之前带有`endmatchhere`的替换
