Use `Get-UICulture` to determine system locale name

--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -23,10 +23,10 @@ LC_TIME="en_US.UTF-8"
 LC_ALL=
 ```
 
-在Windows系统中，你可以使用`powershell /c Get-Culture`查看当前系统语言。输出中的`Name`条目为语言名称。
+在Windows系统中，你可以使用`powershell /c Get-UICulture`查看当前系统语言。输出中的`Name`条目为语言名称。
 
 ```plaintext
-C:\> powershell /c Get-Culture
+C:\> powershell /c Get-UICulture
 LCID             Name             DisplayName
 ----             ----             -----------
 1033             en-US            English (United States) 
