Improve Windows locale setting description

--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -23,23 +23,27 @@ LC_TIME="en_US.UTF-8"
 LC_ALL=
 ```
 
-在Windows系统中，你可以使用`powershell /c Get-UICulture`查看当前系统语言。输出中的`Name`条目为语言名称。
+在Windows系统中，你可以使用`powershell /c Get-WinSystemLocale`查看当前系统语言。输出中的`Name`条目为语言名称。
 
 ```plaintext
-C:\> powershell /c Get-UICulture
+C:\> powershell /c Get-WinSystemLocale
 LCID             Name             DisplayName
 ----             ----             -----------
 1033             en-US            English (United States) 
 ```
 
-> [!IMPORTANT]
-> 需确保系统语言名称使用下划线符号；比如，`en-US`需写成`en_US`。
+> [!TIP]
+> 建议使用带有下划线符号的语言名称；比如，`en-US`需在定义文件中写成`en_US`。
 
-## 主题定义文件：为字符串定义添加多个语言版本
+> [!NOTE]
+> 在新版本的Windows 11上，命令行程序的语言由**语言和区域**设置中位于**Windows显示语言**下的**非Unicode程序的语言**控制，
+> 并需要关闭**使用Unicode UTF-8 提供全球语言支持**选项。
+
+## 主题定义文件：为定义和替换规则添加多个语言版本
 
 你可以为一个字符串定义和命令行输出替换规则添加多个语言版本。CLItheme会根据系统语言或者应用程序的语言设定自动选择相应的定义。
 
-定义时建议添加`default`语言。如果该定义不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在该定义支持当前系统语言的情况下才会被调用。
+定义时建议添加`default`语言。如果该定义不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在该定义支持当前系统语言的情况下才会被使用。
 
 > [!TIP]
 > 你可以使用`default:`来替代`locale[default]:`和`[default]`来替代`[locale] default`。
