Revise providing info documentation

--- a/应用程序和字符串定义API/应用程序适配/2. 给用户提供所需的信息.md
+++ b/应用程序和字符串定义API/应用程序适配/2. 给用户提供所需的信息.md
@@ -1,40 +1,32 @@
 # 需要给用户提供的信息
 
-为了能让用户知道应用程序中能自定义的字符串和提示，你的应用程序需要通过某种方式提供所需的信息。比如说，应用程序可以通过一个命令行参数来输出所有适配的字符串和提示，或者可以通过对应的官方文档说明这个信息。
+为了能让用户知道应用程序中能自定义的字符串和提示，你的应用程序需要通过某种方式说明支持的字符串定义。比如说，应用程序可以通过对应的官方文档说明这个信息。
 
-这个信息中的每一个条目应该包括以下信息：
-
-- 路径名称
-- 默认字符串/提示语句
-- 支持的语言和对应的默认语句
-- 额外说明（如果需要）
+每一个条目应该包括**路径名称**和**支持的语言及对应的默认语句**。
 
 总之，你向用户提供的信息应该保持简洁易懂。更清晰和有效的信息可以帮助用户写出更好的主题定义文件。
 
 ## 样例
 
-比如说，应用程序可以允许用户通过`--clitheme-output-defs`等类似参数来输出所有的字符串定义：
+比如，在应用程序的文档中，可以使用以下格式列出支持的字符串定义和默认语句：
 
 ```plaintext
-$ example-app --clitheme-output-defs
 com.example example-app found-file
-zh_CN:
-在当前目录找到了{}个文件
+[default] Found {} files in current directory
+[zh_CN] 在当前目录找到了{}个文件
 
 com.example example-app installing-file
-zh_CN:
--> 正在安装"{}"...
+[default] Installing {}...
+[zh_CN] -> 正在安装"{}"...
 
 com.example example-app install-success
-zh_CN:
-已成功安装{}个文件
+[default] Successfully installed {} files
+[zh_CN] 已成功安装{}个文件
 
 com.example example-app file-not-found
-zh_CN:
-错误：找不到文件 "{}"
+[default] Error: can't find file {}
+[zh_CN] 错误：找不到文件 "{}"
 ```
-
-为了能让用户更方便的访问这个信息，应用程序还可以在官方文档中说明所有的字符串定义，并且包括额外的解释和说明。如需查看样例，请参考本仓库`example-clithemedef`中的README文件。
 
 ## 字符串规范和注意事项
 
