--- a/简体中文/命令行输出替换/0. 样例教程.md
+++ b/简体中文/命令行输出替换/0. 样例教程.md
@@ -8,12 +8,14 @@
 
 ## 1. 获取应用程序的输出
 
-假如说我们想要自定义`clang`编译器中的一个错误提示。如果我们的测试文件时`test.c`，我们可以使用`clitheme-exec --showchars clang test.c`来获取包含终端控制符号的输出。编写替换规则时需要考虑到这些终端控制符号；这是为什么我们要获取**包含终端控制符号**的输出。你也可以使用`--nosubst`来获取未替换过的输出，如果你已经设定了主题。
+假如说我们想要自定义`clang`编译器中的一个错误提示。如果我们的测试文件是`test.c`，我们可以使用`clitheme-exec --showchars clang test.c`来获取包含终端控制符号的输出。编写替换规则时需要考虑到这些终端控制符号。
+
+你也可以使用`--nosubst`来获取未替换过的输出，如果你已经设定了主题。
 
 你可以使用`--debug`选项来在每一行输出前加上标记。~~这个标记会包含输出为stdout或stderr的信息（通过`o`和`e`表达）。~~
 
 > [!NOTE]
->  `--showchars`和任何debug选项必须放在`clang test.c`的前面，否则要执行的命令将会被认为`clang test.c --showchars`。
+> `--showchars`和任何debug选项必须放在命令的前面（如`clitheme-exec --showchars --debug clang`）
 
 > [!TIP]
 > 如需了解更多信息，请阅读[使用clitheme-exec](2.%20使用clitheme-exec.md)文档。
@@ -50,9 +52,9 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ### 为输出编写正则表达式
 
-我们可以为这些输出编写正则表达式**替换规则**。如需了解正则表达式和Python的正则表达式语法，你可以参考[Python官方文档中的这篇文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
+我们可以为这些输出编写**正则表达式替换规则**。如需了解正则表达式和Python的正则表达式语法，你可以参考[Python官方文档中的这篇文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
 
-为了防止不小心替换无关的内容输出，我们在这个样例中会从行的开头开始匹配内容（平时写替换规则时不需要都这样子做），包括前面的文件和行数信息（如`test.c:1:1:`）。但是，这里不需要匹配行中的所有内容，所以无需考虑行结尾的无关内容。
+为了防止不小心替换无关的内容输出，我们在这个样例中会从行的开头开始匹配内容，包括前面的文件和行数信息（如`test.c:1:1:`）。但是，这里不需要匹配行中的所有内容，所以无需考虑行结尾的无关内容。
 
 > 我们拿这行输出举例（这篇文档中的`{{ESC}}`会在编写定义文件时被替换成ASCII Escape字符）：
 > 
@@ -71,7 +73,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 > - 这个表达式中包含了对Escape字符的匹配；这是必要的。否则，该表达式不会匹配到输出，从而无法替换内容。
 > - 这个正则表达式中使用了命名组来区分内容中的每一部分。这是一个推荐的写法，因为引用起来会更加容易和错误率更少。
 
-写好匹配表达式后，我们可以继续写要替换成的内容了。这里要注意的是替换的内容也会根据正则表达式的相关语法处理一些特殊字符；你可以参考之前链接的那篇文章的内容。比如说，我们可以把上述提示输出替换成以下内容，实现对应用程序输出的自定义。
+写好匹配表达式后，我们可以继续写要替换成的内容了。这个替换表达式引用了之前定义的分组以保留部分捕获的内容。
 
 ```plaintext
 \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
@@ -79,9 +81,9 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 这里的`\g<组名>`语法会将上方匹配表达式匹配到的分组内容放到替换内容中（Python正则表达式引擎语法）。这里使用`\g<prefix>`是为了保留输出的前缀（`test.c:1:1:`），并且这里使用的`\g<name1>`和`\g<name2>`是为了保留名称类型（比如输出中的`char *`和`int *`）。
 
-### 编写替换规则和定义文件
+### 将表达式写成替换规则
 
-我们现在可以把这些替换规则放进一个定义文件中了。以下内容是根据上述的内容编写的主题定义文件，包括另一个提示输出（`unknown type name`那一行）：
+我们现在可以把这些正则表达式写成替换规则，放进一个定义文件中。以下文件是根据上述的内容编写的主题定义文件，包括另一个提示输出（`unknown type name`那一行）：
 
 ```plaintext
 # 在header中定义一些关于该主题定义的基本信息（必须定义）
@@ -94,7 +96,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 {/header}
 
 {substrules}
-    # 设定"substesc"选项：内容中的"{{ESC}}"字样会被替换成ASCII Escape终端控制符号
+    # `substesc`选项：内容中的`{{ESC}}`字样会被替换成ASCII Escape终端控制符号
     (set_options) substesc
     # 命令限制条件：以下的替换规则仅会在以下命令中被应用。建议设定这个条件，因为可以尽量防止不应该的输出替换。
     [filter_cmds]
@@ -102,8 +104,8 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
         clang++
     [/filter_cmds]
         [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
-            # 如果你想仅在系统语言设定为中文（zh_CN）时应用这个替换规则，你可以使用"locale[zh_CN]:"
-            # 使用"default:"时不会添加系统语言限制
+            # 如果你想仅在系统语言设定为中文（zh_CN）时应用这个替换规则，你可以使用`locale[zh_CN]:`
+            # 使用`default:`时不会添加系统语言限制
             default: \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
         [/subst_regex]
         [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
@@ -144,9 +146,11 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 > [!TIP]
 > 如需了解字符替换、行边界、和替换规则选项等功能，请阅读[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)文档。
 
-## 3. 使用定义文件
+## 3. 应用定义文件
 
-在终端中执行`clitheme apply-theme <文件名>`以应用定义文件，并且运行`clitheme-exec clang test.c`以看到效果。你也可以使用`python3 -m clitheme`和`python3 -m clitheme.exec`命令。
+在终端中执行`clitheme apply-theme <文件名>`以应用定义文件，并且运行`clitheme-exec clang test.c`以看到效果。
+
+你也可以使用`python3 -m clitheme`和`python3 -m clitheme.exec`命令。
 
 ```plaintext
 $ clitheme-exec clang test.c
