--- a/简体中文/命令行输出替换/1. 编写定义文件.md
+++ b/简体中文/命令行输出替换/1. 编写定义文件.md
@@ -1,32 +1,30 @@
-# 编写定义文件（命令行输出替换）
+# 编写定义文件：命令行输出替换
 
-CLItheme允许你通过替换规则和定义来自定义任何命令行应用程序的输出。本文章将介绍如何编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)和这些替换规则。
+CLItheme允许你通过替换规则和定义来自定义任何命令行应用程序的输出。本文章将介绍如何编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)的替换规则。
 
 ## 编写`header`段落
 
-你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落.md)
-
-## `substrules`段落
-
-在主题定义文件中，所有的输出替换规则和定义都是定义在文件中`substrules`段落的。请使用以下语法定义`substrules`段落。
-
-```plaintext
-{substrules}
-    <在这里定义规则>
-{/substrules}
-```
+你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落.md)文章。
 
 ## 定义替换规则
 
-替换规则分为两种：**字符串替换**和**正则表达式**替换。前者会匹配完全相同的输出文本和字符，后者会根据正则表达式中的规则匹配输出文本。
-
-### 字符串和正则表达式替换：`subst_string`和`subst_regex`
-
-定义字符串规则的语法如下：
+在主题定义文件中，所有的输出替换规则会被定义在文件中`substrules`段落：
 
 ```plaintext
 {substrules}
-    # 把"{{ESC}}"替换为ANSI Escape字符：
+    # <在这里定义规则>
+{/substrules}
+```
+
+替换规则分为两种：**字符串替换**和**正则表达式**替换。前者会匹配完全相同的输出文本和字符，后者会根据正则表达式匹配输出文本。
+
+### 字符串和正则表达式替换：`subst_string`和`subst_regex`
+
+定义替换规则的语法如下：
+
+```plaintext
+{substrules}
+    # `substesc`：把"{{ESC}}"替换为ANSI Escape字符
     (set_options) substesc
 
     [subst_string] <单行匹配文本>
@@ -47,7 +45,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         <多行匹配正则表达式>
     <<subst_regex]
         [locale] <default或其他系统语言（locale）>
-            <替换内容（正则表达式替换语法）>
+            <替换表达式>
         [/locale]
         # 或者：
         locale[<default或其他系统语言（locale）>]: <替换文本内容>
@@ -55,8 +53,10 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {/substrules}
 ```
 
-- **单行匹配**：在`[subst_string]`之后输入要匹配/查找的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式
-    - 该规则仅能匹配单行输出。比如，`content(\r\n)content`等正则表达式不会匹配到任何内容；这类规则需使用多行匹配语法。
+---
+
+- **单行匹配**：在`[subst_string]`之后输入要匹配的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式
+    - 该规则仅能匹配单行输出。比如，`content(\r\n)content`等正则表达式不会匹配到任何内容；这类规则需使用多行匹配规则。
 - **多行匹配**：在`[subst_string>>`或`[subst_regex>>`段落内输入用于匹配多行输出的文本内容/正则表达式，由`<<subst_string]`或`<<subst_regex]`结束段落
     - 如需匹配输出中的换行符号，建议把换行后的内容放在表达式的下一行上。**段落中的换行会匹配输出中不同类型的换行符。**
     - 如需在正则表达式中使用`\r`、`\n`等换行符号，建议通过`clitheme-exec --showchars <命令>`命令核对程序实际输出中使用的换行符号。
@@ -65,26 +65,25 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ---
 
+**单行替换：**
+
+- 如果替换的内容只有一行，你可以使用`locale[<系统语言>]:`并且在后面加上替换的内容。当前的系统语言符合时才会执行替换规则
+    - 你可以同时指定多个系统语言，如`locale[en_US C]:`
+    - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
+- 如果不需要限制语言，你可以使用`default:`（相当于`locale[default]:`）
+    - 当规则中的其他语言定义匹配不上当前的系统语言时，该定义会被使用
+
 **多行替换：**
 
 - 在`[locale]`文本段落内输入要替换的内容，并在`[locale]`语句之后定义系统语言（locale）：当前的系统语言符合时才会执行替换规则
-    - 你可以同时指定多个系统语言，如：`[locale] en_US zh_CN`
-    - 如不需要限制系统语言，请使用`default`语言：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义
+    - 你可以同时指定多个系统语言，如：`[locale] en_US C`
     - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
     - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md#关于缩进和边缘空格的处理)
 - 如果不需要限制语言，你可以使用`[default]`文本段落（相当于`[locale] default`）
 
-**单行替换：**
-
-- 如果替换的内容只有一行，你可以使用`locale[<系统语言>]:`并且在后面加上替换的内容：当前的系统语言符合时才会执行替换规则
-    - 你可以同时指定多个系统语言，如`locale[en_US C]:`
-    - 如不需要限制系统语言，请使用`default`语言：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义
-    - 更多关于语言机制的信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
-- 如果不需要限制语言，你可以使用`default:`（相当于`locale[default]:`）
-
 ---
 
-- **如果匹配的内容之间有任何终端控制字符或特殊字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）
+- **如果输出内容之间有任何终端控制字符或特殊字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）
     - 如需引用ANSI Escape字符（`{{ESC}}`），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substesc`选项，并在内容中使用`{{ESC}}`
     - 如需引用其他字符（如`\x08`、`\x07`等），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substchar`选项，并在内容中使用如`{{[x08]}}`、`{{[x07]}}`等表达式
 
@@ -92,8 +91,8 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 > 更多选项和功能（如内容变量、换行匹配指针控制序列、仅匹配前台进程输出）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
 
 - 主题定义文件中的替换规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
-    - **这意味着你可以通过多个替换规则来更改/替换一行的输出，但需要考虑之前规则替换的内容**
-- 如果替换规则的匹配文本/表达式、命令限制条件、和stdout/stderr限制设定于之前的规则相同，将被视为重复规则，并且之前的规则会被删除
+    - 这意味着你可以通过多个替换规则来更改一行的输出，但需要考虑之前规则替换的内容
+- 如果替换规则的匹配文本/表达式、命令限制条件、~~和stdout/stderr限制设定~~于之前的规则相同，将被视为重复规则，并且之前的规则会被删除
 - 如果执行替换规则的时间超过1秒，则会视为超时，并且会输出未处理过的内容
 - 不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容
 
@@ -101,7 +100,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ```plaintext
 {substrules}
-    # substesc和endmatchhere选项会对以下所有的替换规则生效
+    # `substesc`和`endmatchhere`选项会对以下所有的替换规则生效
     (set_options) endmatchhere substesc
     [subst_string] Some text
         [default]
@@ -127,10 +126,10 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ### 同时指定多个匹配表达式
 
-在替换内容基本相同的情况下，你可以为一个规则定义同时指定多个匹配表达式。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[subst_string]`或`[subst_regex]`语句。
+在替换内容相同的情况下，你可以为一个规则定义同时指定多个匹配表达式。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。
 
 > [!NOTE]
->  不能同时指定`[subst_string]`或`[subst_regex]`语句（两者不能在同一个规则定义中混用）
+> 不能同时指定`[subst_string]`或`[subst_regex]`语句（两者不能在同一个规则定义中混用）
 
 ```plaintext
 {substrules}
@@ -196,23 +195,22 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {/substrules}
 ```
 
-- 在`[filter_cmds]`中输入命令以设定限制。定义后，之后定义的替换规则仅会对这些命令生效。
-    - 你可以同时指定多个命令；只需要通过换行分开就可以了
-    - 你可以指定带有选项的命令（如`rm -r -f`和`example-app do-something -e`）
-- 你也可以使用`<filter_cmd> <命令>`来指定单个命令；这样输入起来会更便捷
+- 在`[filter_cmds]`中输入由换行分开的命令。定义后，之后定义的替换规则仅会对这些命令生效。
+    - 你可以指定带有选项的命令，如`rm -r -f`
+- 你也可以使用`<filter_cmd> <命令>`来指定单个命令
 - 你也可以使用`[filter_cmds_regex]`或`<filter_cmd_regex>`通过正则表达式匹配命令。检查时会尝试匹配命令的开头（会在表达式前加上`^`符号）。
-- 使用`<unset_filter_cmd>`来取消设定限制。设定后，之后定义的替换规则不会拥有命令限制。
+- 使用`<unset_filter_cmd>`来为之后的替换规则取消设定限制。
 
 > [!NOTE]
->  如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
+> 如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme也会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
 
 ### 命令匹配机制
 
-默认情况下，只要用户输入的命令的第一个语句与限制条件命令的相同，并且用户输入命令包含限制条件命令中所有语句，相应的匹配条件会生效。**这里的语句指的是用空格分开的词语。**
+默认情况下，只要用户输入的命令的第一个语句与限制条件命令的相同，并且用户输入命令包含限制条件命令中所有语句，相应的匹配条件会生效。
 
 比如说，用户输入的`rm something -rf`指令会匹配限制条件中的`rm -rf`规则，但不会匹配到`something -rf rm`（因为第一个语句不同）和`rm -f`（因为原命令中不包括`-f`）。
 
-你也可以为限制规则[设定选项](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)选择[其他的匹配机制](../附录：主题定义文件通用语法/可以设定的选项.md#命令限制规则)，比如：
+你也可以通过为限制规则[设定选项](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)选择[其他的匹配机制](../附录：主题定义文件通用语法/可以设定的选项.md#命令限制规则)，比如：
 
 ```plaintext
 [filter_cmds]
@@ -228,4 +226,4 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ## 应用主题（`clitheme apply-theme`）
 
-主题定义文件写好后，你需要应用这个文件到系统中。请在终端执行`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-exec`来使用这些替换规则。详见[使用clitheme-exec](2.%20使用clitheme-exec.md)。
+主题定义文件写好后，请使用执行`clitheme apply-theme <文件名>`以应用主题，并使用`clitheme-exec`来使用这些替换规则。详见[使用clitheme-exec](2.%20使用clitheme-exec.md)。
