--- a/简体中文/自定义manpage文档/1. 编写定义文件.md
+++ b/简体中文/自定义manpage文档/1. 编写定义文件.md
@@ -1,6 +1,6 @@
 # 编写定义文件：manpage文档
 
-本文章将介绍[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)中的`manpage`段落语法。这个段落允许你添加自定义的Unix文档手册（`manpage`）文档，达到文档自定义的目的。
+本文章将介绍[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)中的`manpages`段落语法。这个段落允许你添加自定义的Unix文档手册（`manpage`）文档，达到文档自定义的目的。
 
 有关Unix/Linux文档手册的更多信息，请见[本文章](https://www.man7.org/linux/man-pages/man1/man.1.html)。
 
@@ -8,15 +8,17 @@
 
 你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../附录：主题定义文件通用语法/header段落.md)
 
-## 关于文件路径的重要信息
+## 关于文件路径信息
 
-在本文档中会提到**目标文件路径**。它指的是该文档手册定义应该放在manpath中（如`/usr/share/man`中的路径结构）的什么地方，用的是相对路径。比如说，如果该文档手册在章节1中，文件路径应该是`man1/<name>.1`；如果在章节3中，应该是`man3/<name>.3`。如果你想包括特定语言的文档手册，请在文件路径之前加上系统语言（locale）名称，比如`zh_CN/man1/<name>.1`。有关章节的更多信息，请见上述提到的文章。
+在本文档中提到的**目标文件路径**指的是该Unix文档手册（manpage）应该放在manpath中（如`/usr/share/man`中的路径结构）的什么地方。
 
-在定义文件中，文件路径中的子路径是由空格分开的，不是以划线分开的，并且不能包含任何划线（`/`、`\`）。所以说，`man1/<name>.1`应该在定义文件中写成`man1 <name>.1`。
+比如说，如果该文档手册在章节1中，文件路径应该是`man1/<name>.1`；如果在章节3中，应该是`man3/<name>.3`。如果你想包括特定语言的文档手册，请在文件路径之前加上系统语言（locale）名称，比如`zh_CN/man1/<name>.1`。有关章节的更多信息，请见上述提到的文章。
+
+在定义文件中，文件路径中的子路径是由空格分开的，并且不能包含任何划线（`/`、`\`）。所以说，`man1/<name>.1`应该在定义文件中写成`man1 <name>.1`。
 
 ## `manpages`段落
 
-在定义文件中，所有的Unix文档手册都是在`manpages`段落中实现的。请使用以下语法定义`manpages`段落：
+在定义文件中，所有的Unix文档手册都是在`manpages`段落中定义的：
 
 ```plaintext
 {manpages}
@@ -24,7 +26,7 @@
 {/manpages}
 ```
 
-### 文件内容：`[file_content]`
+### 通过文件内容定义：`[file_content]`
 
 你可以使用`[file_content]`语法通过输入文件内容来定义文档手册。在`[file_content]`语句后面需要添加目标文件路径，比如`[file_content] man1 example-app.1`。
 
@@ -58,7 +60,7 @@
 
 ### 引用文件：`<include_file>`和`[include_file]`
 
-你可以使用`<include_file>`语法来使用定义文件所在文件夹中的一个文件来作为文档手册的文件内容，并且在下一行中使用`as:`语法来定义目标文件路径。在`<include_file>`后根据**目标文件路径**语法添加引用文件的相对文件路径（根据**定义文件所在的文件夹/路径**计算，不是终端的PWD/当前路径位置），并且在`as:`后添加目标文件路径。
+你可以使用`<include_file>`语法来使用定义文件所在文件夹中的一个文件来作为文档手册的文件内容，并且在下一行中使用`as:`语法来定义目标文件路径。
 
 你也可以使用`[include_file]`段落来指定多个目标文件，以使用同一个源文件来覆盖多个文档。
 
@@ -67,7 +69,7 @@
     # 如果主题定义文件的路径是"Documents/example-doc.ctdef.txt"，那引用的文件会从"Documents/doc_manpages/example-app.1"读取
     <include_file> doc_manpages example-app.1
         as: man1 example-app.1
-    # 你也可以使用以下语法来覆盖多个目标文档文件
+    # 你也可以使用以下语法指定多个目标路径
     [include_file] doc_manpages example-app.1
         as: man1 example-app.1
         as: man1 app-example.1
@@ -78,4 +80,4 @@
 
 ## 应用主题（`clitheme apply-theme`）
 
-主题定义文件写好后，你需要应用这个文件到系统中。请在终端执行`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-man`来使用这些文档手册。详见[使用clitheme-man](2.%20使用clitheme-man.md)。
+主题定义文件写好后，使用`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-man`来使用这些文档手册。详见[使用clitheme-man](2.%20使用clitheme-man.md)。
