Add English `Using clitheme-man` and revise Chinese version

--- a/简体中文/自定义manpage文档/2. 使用clitheme-man.md
+++ b/简体中文/自定义manpage文档/2. 使用clitheme-man.md
@@ -1,20 +1,12 @@
 # 使用`clitheme-man`命令行工具
 
-使用`clitheme-man`命令行工具以查看并使用自定义的Unix文档手册。这些自定义的文档手册通过主题定义文件中的`manpage`段落定义。`clitheme-man`会修改`MANPATH`环境变量以包括这些自定义文档手册，并且直接执行系统中的`man`命令行工具。所以，`clitheme-man`的选项和参数与`man`完全一样；你可以把`clitheme-man`当成`man`使用。
+使用`clitheme-man`命令行工具以查看当前主题数据下的自定义的Unix文档手册。`clitheme-man`会修改`MANPATH`环境变量以包括这些自定义文档手册，并且直接执行系统中的`man`命令行工具。所以，`clitheme-man`的选项和参数与`man`完全一样；你可以把`clitheme-man`当成`man`使用。
 
 你可以使用`clitheme-man`或`python3 -m clitheme.man`：
 
 ```plaintext
 $ clitheme-man
 What manual page do you want?
-```
-
-如需在代码仓库文件夹中调用`clitheme-man`，请调用仓库中的模块文件：
-
-```plaintext
-# 在仓库根目录中执行：
-$ python3 -m src.clitheme.man
-<...>
 ```
 
 ## 使用方法
